# learned-indexes

./: .gitignore  CMakeLists.txt  OPTIMIZATION_REPORT.md  README.md  run_benchmarks.sh
benchmarks/: BaselineIndex.h  WorkloadGenerator.h  adversarial_search.cpp  main.cpp  profiler_runner.cpp
include/: ConcurrentSkipList.h  CountMinSketch.h  DeltaBuffer.h  GappedArray.h  IndexSegment.h  LearnedIndex.h  PLA.h
scripts/: generate_heatmap.py  plot.py  plot_adversarial.py
tests/: main.cpp
